Fixed popup tail on dark mode

--- a/playbook/app/pb_kits/playbook/pb_map/_map.scss
+++ b/playbook/app/pb_kits/playbook/pb_map/_map.scss
@@ -90,7 +90,7 @@
       color: $text_dk_default;
     }
 
-    .maplibregl-popup-anchor-bottom {
+    .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip, .maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
       border-top-color: $bg_dark;
     }
     .map-zoom-in-button,
